# loabot-interaction-example

./: .gitmodules  script.sh
discord_bot/: CMakeLists.txt  discord.cpp  discord.hpp  main.cpp
hello-lambda/: CMakeLists.txt  discord_resopnse.hpp  discord_response.cpp  main.cpp
